kubernetes/payload-cms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: /nix/store/s9ggddb4w8h8541qk8wv0f51zz5x7f4w-kompose-1.38.0/bin/kompose --file docker-compose.production.yaml convert --out /home/netsa/Desktop/github/andrewthomaslee/payload-cms/kubernetes/
    kompose.controller.type: deployment
    kompose.hpa.cpu: "85"
    kompose.hpa.memory: "70"
    kompose.hpa.replicas.max: "5"
    kompose.hpa.replicas.min: "1"
    kompose.image-pull-policy: Always
    kompose.service.expose: andrewlee.fun
    kompose.service.expose.ingress-class-name: traefik
    kompose.service.group: payload-cms
    kompose.service.healthcheck.liveness.http_get_path: /health
    kompose.service.healthcheck.liveness.tcp_port: "3000"
    kompose.service.healthcheck.readiness.http_get_path: /ready
    kompose.service.healthcheck.readiness.http_get_port: "3000"
    kompose.service.healthcheck.readiness.interval: 60s
    kompose.service.healthcheck.readiness.retries: "5"
    kompose.service.healthcheck.readiness.start_period: 60s
    kompose.service.healthcheck.readiness.tcp_port: "3000"
    kompose.service.healthcheck.readiness.timeout: 30s
    kompose.service.type: clusterip
    kompose.version: 1.38.0 (HEAD)
    kompose.volume.size: 8Gi
    kompose.volume.storage-class-name: longhorn
    kompose.volume.subpath: /app
    kompose.volume.type: persistentVolumeClaim
  labels:
    io.kompose.service: payload-cms
  name: payload-cms
spec:
  ingressClassName: traefik
  rules:
    - host: andrewlee.fun
      http:
        paths:
          - backend:
              service:
                name: payload-cms
                port:
                  number: 3000
            path: /
            pathType: Prefix
